# SIEM-Log-Analysis

./: CONTRIBUTING.md  Dockerfile  GUIDE.md  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/config/: README.md
src/sieman/: __init__.py  alerts.py  cli.py  ingest.py  models.py  parser.py  report.py
tests/: test_parser.py
